# competitiveProgramming

AB/: AB.kt
candiesAndTwoSisters/: candiesAndTwoSisters.kt
choosingSymbolPairs/: ;  CMakeCache.txt  CMakeLists.txt  Makefile  choosingSymbolPairs  cmake_install.cmake
dominoPiling/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dominoPiling
dominoPiling/src/: dominoPiling.cpp
happyFarm5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
happyFarm5/src/: happyFarm.cpp
linkedLists/: info.txt
nextRound/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  nextRound
nextRound/src/: nextRound.cpp
partyInvitation/: CMakeLists.txt
team/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  team
team/src/: team.cpp
watermelon/: CMakeCache.txt  CMakeLists.txt  Makefile  Monsters  cmake_install.cmake
watermelon/src/: Main.cpp
wayTooLongWords/: CMakeCache.txt  CMakeLists.txt  Makefile  WayTooLongWords  cmake_install.cmake
wayTooLongWords/src/: Main.cpp
